// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 1`] = `
"# Generated by Anvil — kustomization for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
# Single owner of the image, the namespace, and the labels. Render with
# \`kubectl kustomize deploy/kubernetes\`; apply only the reviewed render.
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: anvil
resources:
  - serviceaccount.yaml
  - configmap.yaml
  - operator-env.yaml
  - deployment.yaml
  - service.yaml
images:
  - name: anvil-runtime
    newName: REPLACE_WITH_REGISTRY/payments-tools
    newTag: REPLACE_WITH_IMAGE_TAG
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 2`] = `
"# Generated by Anvil — runtime ServiceAccount for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
apiVersion: v1
kind: ServiceAccount
metadata:
  name: payments-tools
  labels:
    app.kubernetes.io/name: payments-tools
    app.kubernetes.io/part-of: anvil
    app.kubernetes.io/component: mcp-runtime
automountServiceAccountToken: false
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 3`] = `
"# Generated by Anvil — compiler-owned runtime environment for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
# Listed LAST in the Deployment's envFrom so it takes precedence: an operator
# ConfigMap cannot shadow a safety control (ANVIL_ENV, the egress allowlist,
# timeouts, retention). Every key is declared in deploy/env.schema.json.
apiVersion: v1
kind: ConfigMap
metadata:
  name: payments-tools-runtime-env
  labels:
    app.kubernetes.io/name: payments-tools
    app.kubernetes.io/part-of: anvil
    app.kubernetes.io/component: mcp-runtime
immutable: true
data:
  ANVIL_LEDGER_RESULT_TTL_SECONDS: "604800"
  ANVIL_UPSTREAM_TIMEOUT_MS: "20000"
  PORT: "8080"
  ANVIL_SERVICE_ID: payments
  ANVIL_ENV: prod
  ANVIL_ALLOWED_HOSTS: payments.internal.example.com
  ANVIL_AUTH_PROFILE: prod
  ANVIL_OTEL_EXPORTER: stdout
  ANVIL_CREDENTIALS: env
  ANVIL_SECRET_PROJECT: ""
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 4`] = `
"# Generated by Anvil — operator-supplied environment (non-secret) for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
# The Kubernetes form of Terraform's var.env: settings only an operator can
# decide. Replace every REPLACE_WITH_ value in an overlay before applying;
# the plan steps in README.md refuse a rendered manifest that still has one.
# ANVIL_LEDGER is REQUIRED outside dev: set it to a durable ledger URI
# (firestore://PROJECT/DATABASE/NAMESPACE, or a scheme an ANVIL_EXTENSIONS
# module registers). Left empty, /readyz answers 503 and the rollout never
# becomes Ready — the runtime refuses required-idempotency mutations without it.
# Choose one complete option per credential shape and add its keys here:
#   - ANVIL_CREDENTIAL_HOSTS
#   - ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_TOKEN_ENDPOINT
apiVersion: v1
kind: ConfigMap
metadata:
  name: payments-tools-operator-env
  labels:
    app.kubernetes.io/name: payments-tools
    app.kubernetes.io/part-of: anvil
    app.kubernetes.io/component: mcp-runtime
data:
  ANVIL_LEDGER: ""
  ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_ID: REPLACE_WITH_ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_ID
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 5`] = `
"# Generated by Anvil — runtime Deployment for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-tools
  labels:
    app.kubernetes.io/name: payments-tools
    app.kubernetes.io/part-of: anvil
    app.kubernetes.io/component: mcp-runtime
  annotations:
    anvil.dev/service-id: payments
    anvil.dev/deployment-environment: prod
    anvil.dev/runtime-artifact-hash: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: payments-tools
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payments-tools
        app.kubernetes.io/part-of: anvil
        app.kubernetes.io/component: mcp-runtime
      annotations:
        anvil.dev/service-id: payments
        anvil.dev/deployment-environment: prod
        anvil.dev/runtime-artifact-hash: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    spec:
      serviceAccountName: payments-tools
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: runtime
          image: anvil-runtime
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          envFrom:
            - configMapRef:
                name: payments-tools-operator-env
                optional: false
            - secretRef:
                name: payments-tools-credentials
                optional: false
            - configMapRef:
                name: payments-tools-runtime-env
                optional: false
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTP
            timeoutSeconds: 12
            periodSeconds: 15
            failureThreshold: 16
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 6`] = `
"# Generated by Anvil — ClusterIP Service for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
# Cluster-internal by default — the Cloud Run 'internal ingress' posture. An
# Ingress or Gateway that exposes /mcp beyond the cluster must front a server
# that self-enforces inbound auth (ANVIL_INBOUND_* in the operator ConfigMap).
apiVersion: v1
kind: Service
metadata:
  name: payments-tools
  labels:
    app.kubernetes.io/name: payments-tools
    app.kubernetes.io/part-of: anvil
    app.kubernetes.io/component: mcp-runtime
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: payments-tools
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 7`] = `
"# Generated by Anvil — required Secret (names only) for "payments" (payments-tools).
# Anvil emits this manifest; it never applies it. Regenerate with anvil, never hand-edit.
# Not a Kubernetes manifest and not listed in kustomization.yaml: the contract
# for the Secret the Deployment references by name. Create it from your own
# store; Anvil never holds or echoes a value. Keys are the exact env names in
# deploy/credentials.required.yaml.
service: payments
secret:
  name: payments-tools-credentials
  namespace: anvil
  type: Opaque
referencedBy: "deployment/payments-tools (envFrom.secretRef, optional: false)"
keys:
  - ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_SECRET
note: Every key is required. A missing Secret keeps the pod from starting (fail
  closed).
"
`;

exports[`generateKubernetesDeploy > matches the reviewed snapshot for the reference payments bundle 8`] = `
"# Deploying \`payments-tools\` to Kubernetes

Anvil emits these manifests; you (or CI) apply them. They are generated from
AIR service \`payments\` and the same runtime image, env contract, and
fail-closed rules as the Cloud Run target (\`deploy/README.md\`). Anvil never
contacts a cluster.

**One owner per concern.** \`kustomization.yaml\` owns the image, namespace, and
labels. \`configmap.yaml\` is compiler-owned runtime environment and is listed
last in the container's \`envFrom\`, so it takes precedence over anything an
operator supplies — nothing can shadow \`ANVIL_ENV\`, the egress allowlist, the
timeouts, or retention. \`operator-env.yaml\` is what only you can decide.
\`secrets.required.yaml\` names the Secret and its keys; it never holds a value.

## Platform prerequisites (once per cluster)
- the namespace: \`kubectl create namespace anvil\`;
- a registry the cluster can pull from, and push access for CI;
- an Ingress/Gateway only if \`/mcp\` must be reached from outside the cluster —
  then \`ANVIL_INBOUND_AUTH_MODE\` (and its \`ANVIL_INBOUND_*\` family) must be set
  in \`operator-env.yaml\`, because the server's own token check is the gate, not
  network reachability.

## Durable ledger — REQUIRED outside dev
Approved mutation(s) with required idempotency keys: \`payments.refunds.create\`.
Set \`ANVIL_LEDGER\` in \`operator-env.yaml\` to a durable ledger URI
(\`firestore://PROJECT/DATABASE/NAMESPACE\`, or a scheme an \`ANVIL_EXTENSIONS\`
module registers) before applying outside \`dev\`. This fails closed the same way
Cloud Run does: \`/readyz\` answers 503 until the ledger is reachable, the startup
probe never admits the pod, \`rollout status\` times out, and the runtime refuses
required-idempotency mutations. \`anvil deploy ledger <bundle>\` prints the exact
write/store contract.

## Build the image
\`\`\`bash
docker build -f deploy/Dockerfile -t REPLACE_WITH_REGISTRY/payments-tools:REPLACE_WITH_IMAGE_TAG .
docker push REPLACE_WITH_REGISTRY/payments-tools:REPLACE_WITH_IMAGE_TAG
\`\`\`
The context is the bundle root; \`deploy/Dockerfile.dockerignore\` keeps the
image to \`deploy/runtime/\` (prebuilt, distroless, non-root).

## Provide the operator inputs
\`\`\`bash
kubectl -n anvil create secret generic payments-tools-credentials \\
  --from-literal=ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_SECRET="$ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_SECRET"
# each $<KEY> read from your own secret store — never typed into a shell history
\`\`\`
Then set every \`REPLACE_WITH_\` value and \`ANVIL_LEDGER\` — with
\`anvil deploy kubernetes <bundle> --image <registry>/<repo>:<tag> --namespace anvil --out <dir>\`
(the same generator, re-projected outside the certified bundle), or with a
kustomize overlay that patches \`payments-tools-operator-env\` and sets \`images\`.
Required non-secret config: \`ANVIL_PROD_OAUTH2_D8AD572D2FB1B3F6C47061C8A5B64A62_CLIENT_ID\`.

## Plan (render, review, dry-run — no apply)
\`\`\`bash
kubectl kustomize deploy/kubernetes > rendered.yaml
! grep -q REPLACE_WITH_ rendered.yaml      # refuse an unfilled scaffold
kubectl apply -k deploy/kubernetes --dry-run=server
\`\`\`

## Apply and roll out (after review)
\`\`\`bash
kubectl apply -k deploy/kubernetes
kubectl -n anvil rollout status deployment/payments-tools --timeout=300s
kubectl -n anvil get pods -l app.kubernetes.io/name=payments-tools
\`\`\`
A rollout that never becomes Ready is the fail-closed answer: read
\`kubectl -n anvil describe deployment/payments-tools\` and the pod's
\`/readyz\` body (\`code: ledger_unavailable\`) before touching anything else.

## Roll back
\`\`\`bash
kubectl -n anvil rollout undo deployment/payments-tools
\`\`\`

## Safety notes
- **Probes.** \`/readyz\` is readiness and the startup gate: it performs a non-mutating
  ledger lookup and answers 503 when the ledger is missing or unreachable.
  \`/healthz\` is liveness only — a provider outage takes the pod out of the
  Service and fails writes closed; it never causes a restart storm.
- **Env precedence is the safety boundary.** Kubernetes gives the last
  \`envFrom\` source precedence and \`payments-tools-runtime-env\` is last. Do
  not reorder the list; do not add keys from \`deploy/env.schema.json\`'s
  compiler-owned set (\`ANVIL_ALLOWED_HOSTS\`, \`ANVIL_AUTH_PROFILE\`, \`ANVIL_CREDENTIALS\`, \`ANVIL_ENV\`, \`ANVIL_LEDGER\`, \`ANVIL_LEDGER_RESULT_TTL_SECONDS\`, \`ANVIL_OTEL_EXPORTER\`, \`ANVIL_SECRET_PROJECT\`, \`ANVIL_SERVICE_ID\`, \`ANVIL_UPSTREAM_TIMEOUT_MS\`)
  to the operator ConfigMap.
- **Secrets by reference.** The Secret is referenced by name, non-optional when
  the surface needs one; the pod does not start without it. \`ANVIL_CREDENTIALS=env\`
  reads static values from that Secret-backed env; OAuth grants and delegated
  identity still route per operation.
- **Internal by default.** A ClusterIP Service is the Cloud Run "internal
  ingress" posture; \`ANVIL_ALLOWED_HOSTS\` pins upstream egress.
- **Records.** \`ANVIL_OTEL_EXPORTER=stdout\` emits one structured record per
  call for the cluster's log pipeline; \`/metrics\` serves OpenMetrics to a scraper.
- **Plan evidence, not apply proof.** A rendered manifest proves what would be
  applied, not that it was. \`anvil publish --target kubernetes\` gates the plan
  on fresh certification and executable evidence and records it in
  \`publication.json\`; the apply remains an operator action.
"
`;
